--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,14 @@
-.App {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html, body {
+  padding: 10px;
+}
+
+.sections {
+  display: flex;
+  grid-gap: 40px;
 }
 
 .item-comparison-table {
